tests/ui/compile-fail/pin_data/twice.stderr
error[E0428]: the name `FooProjection` is defined multiple times
 --> tests/ui/compile-fail/pin_data/twice.rs:3:1
  |
3 | #[pin_data]
  | ^^^^^^^^^^^
  | |
  | `FooProjection` redefined here
  | previous definition of the type `FooProjection` here
  |
  = note: `FooProjection` must be defined only once in the type namespace of this module
  = note: this error originates in the macro `$crate::__pin_data` which comes from the expansion of the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `HasPinData` for type `Foo`
 --> tests/ui/compile-fail/pin_data/twice.rs:3:1
  |
3 | #[pin_data]
  | ^^^^^^^^^^^
  | |
  | first implementation here
  | conflicting implementation for `Foo`
  |
  = note: this error originates in the macro `$crate::__pin_data` which comes from the expansion of the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `Unpin` for type `Foo`
 --> tests/ui/compile-fail/pin_data/twice.rs:3:1
  |
3 | #[pin_data]
  | ^^^^^^^^^^^
  | |
  | first implementation here
  | conflicting implementation for `Foo`
  |
  = note: this error originates in the macro `$crate::__pin_data` which comes from the expansion of the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0592]: duplicate definitions with name `project`
 --> tests/ui/compile-fail/pin_data/twice.rs:3:1
  |
3 | #[pin_data]
  | ^^^^^^^^^^^
  | |
  | duplicate definitions for `project`
  | other definition for `project`
  |
  = note: this error originates in the macro `$crate::__pin_data` which comes from the expansion of the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/ui/compile-fail/pin_data/twice.rs:3:1
  |
3 | #[pin_data]
  | ^^^^^^^^^^^ expected `&mut usize`, found `Pin<&mut usize>`
  |
  = note: expected mutable reference `&mut usize`
                        found struct `Pin<&mut usize>`
  = note: this error originates in the macro `$crate::__pin_data` which comes from the expansion of the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)
